--- a/docker/zero-admin/.env
+++ b/docker/zero-admin/.env
@@ -1,11 +1,14 @@
 APP_DIR=/app
 DATA_DIR=/data
 LOGS_DIR=/logs
-CODE_DIR=/app/zero-tiny
 
 NETWORK=zero
 
 DOCKER_REGISTRY=crpi-lqf79pij6cz4kaey.cn-beijing.personal.cr.aliyuncs.com
 REGISTRY_NAMESPACE=ice-run-open
 NAMESPACE=zero
+
+APPLICATION=zero-admin
 IMAGE_TAG=latest
+
+SERVER_PORT=80
