--- a/docker/zero-server/.env
+++ b/docker/zero-server/.env
@@ -4,7 +4,8 @@ LOGS_DIR=/logs
 
 NETWORK=zero
 
-REGISTRY=registry.cn-beijing.aliyuncs.com/ice-run
+DOCKER_REGISTRY=crpi-lqf79pij6cz4kaey.cn-beijing.personal.cr.aliyuncs.com
+REGISTRY_NAMESPACE=ice-run-open
 NAMESPACE=zero
 
 APPLICATION=zero-server
@@ -13,11 +14,11 @@ IMAGE_TAG=latest
 SERVER_PORT=80
 
 MYSQL_URL=jdbc:mysql://mysql:3306/zero_tiny
-MYSQL_USERNAME=zero
-MYSQL_PASSWORD=zero
+MYSQL_USERNAME=root
+MYSQL_PASSWORD=root
 
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_USERNAME=
-REDIS_PASSWORD=zero
-REDIS_DATABASE=0
+REDIS_PASSWORD=redis
+REDIS_DATABASE=1
