--- a/.workflow/zero-server.yml
+++ b/.workflow/zero-server.yml
@@ -26,7 +26,7 @@ stages:
         displayName: 构建镜像
         type: cert
         certificate: aliyun-cr-ice-run
-        tag: ${DOCKER_REGISTRY}/${APPLICATION}:${GITEE_BRANCH}
+        tag: ${REGISTRY_NAMESPACE}/${APPLICATION}:${GITEE_BRANCH}
         dockerfile: ./${APPLICATION}/Dockerfile
         context: ./${APPLICATION}
         artifacts: []
