优化部署脚本和构建脚本

--- a/docker/zero-server/compose.yaml
+++ b/docker/zero-server/compose.yaml
@@ -1,7 +1,7 @@
 name: ${APPLICATION}
 
 services:
-  demo:
+  zero-server:
     image: ${DOCKER_REGISTRY}/${REGISTRY_NAMESPACE}/${APPLICATION}:${IMAGE_TAG}
     pull_policy: always
     deploy:
