--- a/.github/workflows/zero-admin.yml
+++ b/.github/workflows/zero-admin.yml
@@ -15,7 +15,7 @@ jobs:
 
     env:
       TZ: Asia/Shanghai
-      REGISTRY_URL: ${{ env.ALIYUN_CR_ICE_RUN_REGISTRY_URL }}
+      REGISTRY_URL: ${{ vars.ALIYUN_CR_ICE_RUN_REGISTRY_URL }}
       REGISTRY_NAMESPACE: ice-run-open
       REGISTRY_USERNAME: ${{ secrets.ALIYUN_CR_ICE_RUN_USERNAME }}
       REGISTRY_PASSWORD: ${{ secrets.ALIYUN_CR_ICE_RUN_PASSWORD }}
