--- a/.github/workflows/zero-server.yml
+++ b/.github/workflows/zero-server.yml
@@ -20,7 +20,7 @@ jobs:
       REGISTRY_USERNAME: ${{ secrets.ALIYUN_CR_ICE_RUN_USERNAME }}
       REGISTRY_PASSWORD: ${{ secrets.ALIYUN_CR_ICE_RUN_PASSWORD }}
       IMAGE_NAME: zero-server
-      IMAGE_TAG: latest
+      IMAGE_TAG: tiny-latest
 
     steps:
       - uses: actions/checkout@main
