调整镜像标签

--- a/docker/.env
+++ b/docker/.env
@@ -8,4 +8,4 @@ NETWORK=zero
 DOCKER_REGISTRY=crpi-lqf79pij6cz4kaey.cn-beijing.personal.cr.aliyuncs.com
 REGISTRY_NAMESPACE=ice-run-open
 NAMESPACE=zero
-IMAGE_TAG=latest
+IMAGE_TAG=tiny-latest
