--- a/docker/zero-server/.env
+++ b/docker/zero-server/.env
@@ -9,7 +9,7 @@ REGISTRY_NAMESPACE=ice-run-open
 NAMESPACE=zero
 
 APPLICATION=zero-server
-IMAGE_TAG=latest
+IMAGE_TAG=tiny-latest
 
 SERVER_PORT=80
 
