--- a/docker/redis/compose.yaml
+++ b/docker/redis/compose.yaml
@@ -1,8 +1,5 @@
-name: redis
-
 services:
   redis:
-    container_name: redis
     image: registry.cn-beijing.aliyuncs.com/daodao-bot/redis:8.2.0
     deploy:
       resources:
@@ -24,7 +21,6 @@ services:
       - .env
     networks:
       - zero
-    restart: always
     healthcheck:
       test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
 
@@ -38,5 +34,5 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: ${DATA_DIR}/redis
+      device: /data/redis
 
