--- a/docker/mysql/compose.yaml
+++ b/docker/mysql/compose.yaml
@@ -12,7 +12,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - data:/var/lib/mysql
+      - data-mysql:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       TZ: Asia/Shanghai
@@ -32,9 +32,5 @@ networks:
     external: true
 
 volumes:
-  data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /data/mysql
+  data-mysql:
+    external: true
