--- a/docker/redis/compose.yaml
+++ b/docker/redis/compose.yaml
@@ -12,7 +12,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - data:/data
+      - data-redis:/data
     command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
     environment:
       TZ: Asia/Shanghai
@@ -29,10 +29,5 @@ networks:
     external: true
 
 volumes:
-  data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /data/redis
-
+  data-redis:
+    external: true
