--- a/docker/redis/compose.yaml
+++ b/docker/redis/compose.yaml
@@ -17,8 +17,9 @@ services:
     environment:
       TZ: Asia/Shanghai
       DT: "2025-01-01T00:00:00"
-    env_file:
-      - .env
+      REDIS_PASSWORD: redis
+    #env_file:
+    #  - .env
     networks:
       - zero
     healthcheck:
