调试部署脚本

--- a/docker/.env
+++ b/docker/.env
@@ -1,11 +1,8 @@
-APP_DIR=/app
-DATA_DIR=/data
-LOGS_DIR=/logs
-CODE_DIR=/app/zero-tiny
+ZERO_DIR=/zero
 
-NETWORK=zero
+ZERO_DOCKER_REGISTRY=crpi-lqf79pij6cz4kaey.cn-beijing.personal.cr.aliyuncs.com
+ZERO_REGISTRY_NAMESPACE=ice-run-open
+ZERO_NAMESPACE=zero
+ZERO_IMAGE_TAG=tiny-latest
 
-DOCKER_REGISTRY=crpi-lqf79pij6cz4kaey.cn-beijing.personal.cr.aliyuncs.com
-REGISTRY_NAMESPACE=ice-run-open
-NAMESPACE=zero
-IMAGE_TAG=tiny-latest
+ZERO_NFS_HOST=
