--- a/docker/admin/nginx.conf
+++ b/docker/admin/nginx.conf
@@ -1,5 +1,5 @@
 upstream server {
-    server zero-server:80 max_fails=3 fail_timeout=30s;
+    server server:80 max_fails=3 fail_timeout=30s;
 }
 
 server {
