--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,5 +1,161 @@
-include:
-  - ./mysql/compose.yaml
-  - ./redis/compose.yaml
-  - ./zero-server/compose.yaml
-  - ./zero-admin/compose.yaml
+services:
+  mysql:
+    image: registry.cn-beijing.aliyuncs.com/daodao-bot/mysql:9.4.0
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: 1G
+        reservations:
+          cpus: "0.2"
+          memory: 256M
+    ports:
+      - "3306:3306"
+    volumes:
+      - data-mysql:/var/lib/mysql
+    configs:
+      - source: mysql-init-sql
+        target: /docker-entrypoint-initdb.d/init.sql
+    secrets:
+      - mysql-password
+    environment:
+      TZ: Asia/Shanghai
+      DT: "2025-01-01T00:00:00.000"
+      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/mysql-password
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_bin
+    networks:
+      - zero
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+
+  redis:
+    image: registry.cn-beijing.aliyuncs.com/daodao-bot/redis:8.2.0
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: 1G
+        reservations:
+          cpus: "0.2"
+          memory: 256M
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+    volumes:
+      - data-redis:/data
+    environment:
+      TZ: Asia/Shanghai
+      DT: "2025-01-01T00:00:00"
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    networks:
+      - zero
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+
+  server:
+    image: crpi-lqf79pij6cz4kaey.cn-beijing.personal.cr.aliyuncs.com/ice-run-open/zero-server:tiny-latest
+    deploy:
+      mode: replicated
+      replicas: 1
+      endpoint_mode: vip
+      resources:
+        limits:
+          cpus: "1"
+          memory: 1G
+        reservations:
+          cpus: "0.2"
+          memory: 256M
+      update_config:
+        parallelism: 1
+        delay: 10s
+        order: start-first
+        failure_action: rollback
+    volumes:
+      - logs-server:/logs
+    configs:
+      - source: server-application-zero.yaml
+        target: /application-zero.yaml
+    environment:
+      TZ: Asia/Shanghai
+      DT: "2025-01-01T00:00:00"
+      SERVER_PORT: 80
+      MYSQL_URL: jdbc:mysql://mysql:3306/zero_tiny
+      MYSQL_USERNAME: root
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_USERNAME:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      REDIS_DATABASE: 1
+    labels:
+      namespace: zero
+      application: zero-server
+      framework: spring-boot
+    networks:
+      - zero
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80/actuator/health"]
+
+  admin:
+    image: crpi-lqf79pij6cz4kaey.cn-beijing.personal.cr.aliyuncs.com/ice-run-open/zero-admin:tiny-latest
+    deploy:
+      resources:
+        limits:
+          cpus: "0.2"
+          memory: 128M
+        reservations:
+          cpus: "0.1"
+          memory: 64M
+    ports:
+      - "80:80"
+    configs:
+      - source: admin-nginx-conf
+        target: /etc/nginx/conf.d/default.conf
+    environment:
+      TZ: Asia/Shanghai
+      DT: "2025-01-01T00:00:00"
+    labels:
+      namespace: zero
+      application: zero-admin
+    networks:
+      - zero
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost"]
+
+secrets:
+  mysql-password:
+    file: ${ZERO_DIR}/conf/mysql/password.txt
+
+configs:
+  mysql-init-sql:
+    file: ${ZERO_DIR}/conf/mysql/init.sql
+  server-application-zero.yaml:
+    file: ${ZERO_DIR}/conf/server/application-zero.yaml
+  admin-nginx-conf:
+    file: ${ZERO_DIR}/conf/admin/nginx.conf
+
+volumes:
+  data-mysql:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=${ZERO_NFS_HOST},rw"
+      device: "${ZERO_DIR}/data/mysql"
+  data-redis:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=${ZERO_NFS_HOST},rw"
+      device: "${ZERO_DIR}/data/redis"
+  logs-server:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=${ZERO_NFS_HOST},rw"
+      device: "${ZERO_DIR}/logs/server"
+
+networks:
+  zero:
+    driver: overlay
