--- a/docker/admin/nginx.conf
+++ b/docker/admin/nginx.conf
@@ -1,7 +1,3 @@
-upstream server {
-    server server:80 max_fails=3 fail_timeout=30s;
-}
-
 server {
     listen       80;
     listen  [::]:80;
@@ -14,7 +10,8 @@ server {
     }
 
     location /server/ {
-        proxy_pass http://server/;
+        resolver 127.0.0.11 valid=30s;
+        proxy_pass http://server:80/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
