--- a/.workflow/server.yml
+++ b/.workflow/server.yml
@@ -1,6 +1,6 @@
 version: '1.0'
-name: zero-server
-displayName: zero-server
+name: server
+displayName: server
 triggers:
   trigger: auto
   push:
@@ -9,11 +9,12 @@ triggers:
         - 2
     paths:
       include:
-        - ^zero-server/.*$
+        - ^server/.*$
 variables:
   REGISTRY_NAMESPACE: ice-run-open
   NAMESPACE: zero
-  APPLICATION: zero-server
+  IMAGE_NAME: zero-server
+  CONTEXT_PATH: ./server
 stages:
   - name: scan
     displayName: 扫描
@@ -24,7 +25,7 @@ stages:
       - step: sc@opensca
         name: open_sca
         displayName: OpenSCA 检测
-        detectPath: ./${APPLICATION}
+        detectPath: ${CONTEXT_PATH}
         notify: []
         strategy:
           retry: '0'
@@ -39,9 +40,9 @@ stages:
         displayName: 构建镜像
         type: cert
         certificate: aliyun-cr-ice-run
-        tag: ${REGISTRY_NAMESPACE}/${APPLICATION}:tiny-${GITEE_BRANCH}
-        dockerfile: ./${APPLICATION}/Dockerfile
-        context: ./${APPLICATION}
+        tag: ${REGISTRY_NAMESPACE}/${IMAGE_NAME}:tiny-${GITEE_BRANCH}
+        dockerfile: ${CONTEXT_PATH}/Dockerfile
+        context: ${CONTEXT_PATH}
         artifacts: []
         isCache: false
         parameter: {}
